Consolidated region and country filtering into a single Activity. Goal is to allow all first order filtering from this Activity.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -36,7 +36,7 @@
 			android:name=".data.provider.GtdProvider"
 			android:authorities="com.gtdbrowser.data.provider.PoCProvider"
 			android:exported="false" />
-		<activity android:name=".ui.RegionListActivity" android:label="@string/region_list_title"></activity>
+		<activity android:name=".ui.FilteredListActivity" android:label="@string/filtered_list_title"></activity>
 		<activity android:name="com.gtdbrowser.ui.AttackListActivity" android:label="@string/attack_list_title"></activity>
 	</application>
 </manifest>
