Scraps of the detail page implemented.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -38,5 +38,6 @@
 			android:exported="false" />
 		<activity android:name=".ui.FilteredListActivity" android:label="@string/filtered_list_title"></activity>
 		<activity android:name="com.gtdbrowser.ui.AttackListActivity" android:label="@string/attack_list_title"></activity>
+		<activity android:name="com.gtdbrowser.ui.AttackDetailActivity" android:label="@string/attack_detail_title"></activity>
 	</application>
 </manifest>
