New icon and various other cosmetic changes.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,7 +8,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.gtdbrowser"
     android:versionCode="2"
-    android:versionName="0.1" >
+    android:versionName="0.5" >
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -35,7 +35,7 @@
 
         <provider
             android:name=".data.provider.GtdProvider"
-            android:authorities="com.gtdbrowser.data.provider.PoCProvider"
+            android:authorities="com.gtdbrowser.data.provider.GtdProvider"
             android:exported="false" />
 
         <activity android:name=".ui.FilteredListActivity" >
